--- a/README.adoc
+++ b/README.adoc
@@ -1,3 +1,3 @@
 = Koppefest
 
-This project holds different versions of simple local advertisement pages
+This project holds different versions of simple local advertisement pages.
